# aiogram3-fun

./: .env  .gitignore  pyproject.toml
app/: __main__.py  config.py
app/keyboards/: menu_keyboard.py
app/middlewares/: __init__.py  counter_middleware.py  logging_middleware.py
app/routes/: __init__.py  menu.py  welcome.py
app/services/: counter.py
